--- a/test/fixtures/bookings.yml
+++ b/test/fixtures/bookings.yml
@@ -4,8 +4,7 @@ one:
   ad_item_id: 1
   from_profile_id: 1
   booking_status_id: 1
-  price: 
-  price: 
+  price: 1.00
   booking_from: 2015-03-28 16:07:46
   booking_to: 2015-03-28 16:07:46
   first_reply_at: 2015-03-28 16:07:46
@@ -14,8 +13,7 @@ two:
   ad_item_id: 1
   from_profile_id: 1
   booking_status_id: 1
-  price: 
-  price: 
+  price: 2.01
   booking_from: 2015-03-28 16:07:46
   booking_to: 2015-03-28 16:07:46
   first_reply_at: 2015-03-28 16:07:46
