--- a/test/fixtures/feedbacks.yml
+++ b/test/fixtures/feedbacks.yml
@@ -2,12 +2,12 @@
 
 one:
   ad_id: 1
-  from_profile_id: 1
+  from_user_id: 1
   score: 1
   body: MyText
 
 two:
   ad_id: 1
-  from_profile_id: 1
+  from_user_id: 1
   score: 1
   body: MyText
