--- a/test/fixtures/messages.yml
+++ b/test/fixtures/messages.yml
@@ -2,12 +2,12 @@
 
 one:
   booking_id: 1
-  from_profile_id: 1
-  to_profile_id: 1
+  from_user_id: 1
+  to_user_id: 1
   content: MyText
 
 two:
   booking_id: 1
-  from_profile_id: 1
-  to_profile_id: 1
+  from_user_id: 1
+  to_user_id: 1
   content: MyText
