Fixed frontpage popular box

--- a/config/data/popular_topics.yml
+++ b/config/data/popular_topics.yml
@@ -1,23 +1,23 @@
 -
-  title: Drill
-  term: drill
-  image: promo_imgs/drill.jpg
+  title: Bil
+  term: bil
+  image: promo_imgs/bil.jpg
 -
-  title: Flisekutter
-  term: flisekutter
-  image: "promo_imgs/flisekutter.jpg"
+  title: Bolig
+  term: bolig
+  image: "promo_imgs/bolig.jpg"
 -
-  title: Stige
-  term: stige
-  image: "promo_imgs/stige.jpg"
+  title: Kajak
+  term: kajak
+  image: "promo_imgs/kajak.jpg"
 -
-  title: Lavvo
-  term: lavvo
-  image: promo_imgs/lavvo.jpg
+  title: Scooter
+  term: scooter
+  image: promo_imgs/scooter.jpg
 -
-  title: Pulk
-  term: pulk
-  image: promo_imgs/pulk.jpg
+  title: Sykkel
+  term: sykkel
+  image: promo_imgs/sykkel.jpg
 -
   title: Telt
   term: telt
