Changed frontend category from kajak to verktøy

--- a/config/data/popular_topics.yml
+++ b/config/data/popular_topics.yml
@@ -7,9 +7,9 @@
   term: bolig
   image: "promo_imgs/bolig.jpg"
 -
-  title: Kajak
-  term: kajak
-  image: "promo_imgs/kajak.jpg"
+  title: Verktøy
+  term: verktøy
+  image: "promo_imgs/verktoy.jpg"
 -
   title: Scooter
   term: scooter
