--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,12 @@
 !/log/.keep
 /tmp
 
+# ignore directory where paperclip leaves its files:
+/public/system/
+
+# for now ignore auto-generated documentation:
+/doc
+
 # Ignore Mac DS_Store files
 .DS_Store
 
