attempt to delete old ads only once an hour.

--- a/config/resque_schedule.yml
+++ b/config/resque_schedule.yml
@@ -2,7 +2,7 @@
 # For config examples see: https://github.com/resque/resque-scheduler#static-schedules
 
 DeleteOldEmptyAdsJob:
-  cron: "*/15 * * * *"
+  cron: "15 * * * *"
   queue: low
   description: "This job deletes all ads which are empty (and older then 6 hours)"
 
