rubocop: Allow for RedundantSelf usage in our code base. at least for now.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,7 +2,11 @@ AllCops:
   RunRailsCops: true
   Exclude:
     - 'db/**/*'
+    - 'log/*'
 
 Metrics/LineLength:
   #Enabled: false
   Max: 120
+
+Style/RedundantSelf:
+  Enabled: false
