--- a/config/data/employees.yml
+++ b/config/data/employees.yml
@@ -9,6 +9,7 @@
   bio:
 - name: Rune Halvorsen
   image: plendbot/robot_profile_03.png
+  bio:
 - name: Renato Arruda
   image: plendbot/robot_profile_02.png
   bio:
