--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -39,8 +39,7 @@ development:
 test:
   <<: *default_settings
   # It doesn't make sense to report to New Relic from automated test runs.
-  #monitor_mode: false
-  # We monitor while we run only manual tests...
+  monitor_mode: false
   app_name: Plendit (Test)
 
 staging:
