sitemap generation now should work, no uploading to S3, but serving locally.
commented out is how to host on s3 and serve via cloudfront.

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@
 # ignore directory where paperclip leaves its files:
 /public/system/
 
+# ignore directory where sitemaps are stored:
+/public/sitemaps
+
 # ignore generated assets:
 /public/assets/
 
